finished U4, preparing for u5 analyze

--- a/notes/ask.tex
+++ b/notes/ask.tex
@@ -1,71 +1,32 @@
 % nta: ahora el ciclo de vida pasa a secciones, con tal de mantener orden en secciones y subsecciones
 
 \section{\textit{Ask} - Preguntar}
-Se establece un \textbf{Desafío/Objetivo Empresarial}, y las características de lo que se considera exitoso. Para esto es necesario comprender las expectativas de los \gls{stkhldrs}, junto a desafíos o preconcepciones anteriores. Algunas técnicas o métodos a aplicar incluyen
+Se establece un \gls{objemp}. Es necesario comprender las expectativas de los \gls{stkhldrs}, junto a sus desafíos o preconcepciones anteriores. Algunas técnicas o métodos a aplicar incluyen
 \begin{itemize}
     \item {\gls{strctrdthnkng}}
     \item {\gls{5w}, para determinar la causa principal de un problema}
     \item {\gls{gpnlss}, para encontrar déficits en el proyecto}
 \end{itemize}
 
-\subsection{Tipos de Problemas}
-\begin{itemize}
-    \item {\textbf{Realizar Predicciones} : Decisiones informadas para visualizar las cosas a futuro}
-    \item {\textbf{Categorizar Cosas} : Asignar información a dos grupos de datos distintos con cualidades comunes}
-    \item {\textbf{Encontrar Algo Inusual} : Identificar datos que se salen de la norma}
-    \item {\textbf{Identificar Temas} : Agrupar información categorizada en conceptos más amplios}
-    \item {\textbf{Descubrir Conexiones} : Encontrar desafíos similares encontrados por otros, para combinar datos y conclusiones}
-    \item {\textbf{Encontrar Patrones} : Utilizar datos históricos para entender qué ocurrió en el pasado, y que podría repetirse}
-\end{itemize}
+\subsection{Tipos de Objetivos}
+\begin{description}
+    \item [Realizar Predicciones]{ : Decisiones informadas para visualizar las cosas a futuro}
+    \item [Categorizar Cosas]{ : Asignar información a dos grupos de datos distintos con cualidades comunes}
+    \item [Encontrar Algo Inusual]{ : Identificar datos que se salen de la norma}
+    \item [Identificar Temas]{ : Agrupar información categorizada en conceptos más amplios}
+    \item [Descubrir Conexiones]{ : Encontrar desafíos similares encontrados por otros, para combinar datos y conclusiones}
+    \item [Encontrar Patrones]{ : Utilizar datos históricos para entender qué ocurrió en el pasado, y que podría repetirse}
+\end{description}
 
 
 \subsection{Preguntas \textit{SMART}}
-Preguntas altamente efectivas y usualmente abiertas, que incitan a respuestas útiles. \textit{Esto contrasta con las preguntas \textbf{sugestivas} con respuestas en particular,\textbf{imprecisas} que no ofrecen \gls{cntxt}, y \textbf{cerradas} con respuestas breves o de una sola palabra}
+Preguntas abiertas (por lo general), que incitan a respuestas útiles y efectivas. \textit{Esto contrasta con las preguntas \textbf{sugestivas} con respuestas en particular, \textbf{imprecisas} que no ofrecen \gls{cntxt}, y \textbf{cerradas} con respuestas breves o de una sola palabra}
 \begin{description}
-    \item [\textit{Specific}]{ : Simples y enfocadas en una cantidad pequeña de ideas relacionadas entre si. \textbf{Esta pregunta tiene el \gls{cntxt} necesario, aborda el problema o entrega la respuesta que necesito?}}
+    \item [\textit{Specific}]{ : Simples, enfocadas en una cantidad pequeña de ideas relacionadas entre si. \textbf{Esta pregunta aborda el problema, entrega la respuesta o \gls{cntxt} que necesito?}}
     \item [\textit{Measurable}]{ : Cuantificables y evaluables. \textbf{Esta pregunta da respuestas medibles?}}
     \item [\textit{Action-Oriented}]{ : Promueven el cambio y la acción. \textbf{Esta pregunta entregará información que ayude a diseñar un plan de acción o cambio?}}
     \item [\textit{Relevant}]{ : Tienen importancia en el problema a resolver. \textbf{Esta pregunta se relaciona con un problema en específico?}}
     \item [\textit{Time-Bound}]{ : Son específicas al periodo de tiempo estudiado. \textbf{La pregunta es relevante para el periodo establecido?}}
 \end{description}
-
-\subsection{Comunicación Clara y Efectiva}
-Mantención de buenas relaciones con colegas, \gls{stkhldrs} y miembros del equipo a través de buenas prácticas de diálogo. \textit{Es importante tomar en cuenta \textbf{quién} es la audiencia, \textbf{qué saben} previamente y \textbf{qué necesitan} saber}
-
-\subsubsection{Identificar antes de Comunicar}
-\begin{itemize}
-    \item {\textbf{Hechos} y datos concretos}
-    \item {\textbf{\gls{cntxt}} y cualquier cosa que facilite la comprensión}
-    \item {\textbf{Incógnitas}, conceptos desconocidos o cosas que se pasen por alto}
-    \item {\textbf{Temas comunes} para preguntas, como objetivos, recursos y seguridad}
-\end{itemize}
-
-\subsubsection{Tips para Comunicación Efectiva}
-\begin{itemize}
-    \item {Aprender en el camino y realizar preguntas}
-    \item {Practicar buenos hábitos de escritura para diálogo por escrito. Leer en voz alta antes de enviar la conversación}
-    \item {Responder en un tiempo adecuado}
-    \item {Ser claro con las necesidades, al igual que la historia a contar a través de los datos}
-\end{itemize}
-
-\subsubsection{Balance de Expectativas y Objetivos}
-\begin{itemize}
-    \item {Ser razonables y realistas al establecer plazos y metas}
-    \item {Identificar desafíos y problemas con anticipación, además de posibles soluciones}
-    \item {Resolver conflictos al replantear el problema, determinar el contexto detrás del conflicto, y tener un diálogo con altura de miras}
-\end{itemize}
-
-\subsection{\gls{stkhldrs} más Comunes}
-\begin{itemize}
-    \item {\textbf{Equipo Ejecutivo} : Proporciona liderazgo estratégico y operativo a la empresa. Generalmente están muy ocupados, por lo que se trabaja con el jefe/gerente de proyecto. \textit{Ejemplos : Vicepresidentes, Directores de Marketing, Profesionales}}
-    \item {\textbf{Equipo Orientado al Cliente} : Cualquier persona en la organización que tenga algún nivel de interacción con clientes, actuales y potenciales}
-    \item {\textbf{Equipo Ciencia de Datos} : 
-    \begin{description}
-        \item [Analista de Datos]{: Recolección, transformación y organización de datos, con tal de realizar conclusiones, predicciones y decisiones basadas en hechos}
-        \item [Ingeniero de Datos]{ : Procesamiento de datos iniciales para crear un proceso viable, al darles un formato útil para el análisis. Generalmente es el encargado de prepararlos para los analistas y científicos}
-        \item [Científico de Datos]{ : Creación de modelos y exploración de lo desconocido usando datos sin editar, para encontrar preguntas y problemas nuevos}
-        \item [Especialistas de Depósitos de Datos]{ : Desarrollo de procesos y procedimientos para guardar y organizar datos de forma efectiva}
-    \end{description}}
-\end{itemize}
 
 \newpage
