--- a/notes/main.tex
+++ b/notes/main.tex
@@ -38,8 +38,9 @@
 % IMPORTACIÓN DEL TEMPLATE
 \input{template}
 
-% Multirow for tables, glossaries
+% Multirow for tables, glossaries, xcolor for styles
 \usepackage{multirow}
+\usepackage{xcolor}
 \usepackage[toc]{glossaries-extra}
 \input{gloss}
 
@@ -64,6 +65,8 @@
 \input{ciclo_datos}
 \input{destrezas}
 \input{statistics}
+\input{spreadsheet}
+\input{SQL}
 \input{tools}
 \input{ask}
 \input{prepare}
