--- a/notes/destrezas.tex
+++ b/notes/destrezas.tex
@@ -54,4 +54,43 @@ Identificar y definir un problema, para luego resolverlo usando datos de forma o
     \end{tabular}
 \end{table}
 
+\subsection{Comunicación Clara y Efectiva}
+Mantención de buenas relaciones con colegas, \gls{stkhldrs} y miembros del equipo a través de buenas prácticas de diálogo. \textit{Es importante tomar en cuenta \textbf{quién} es la audiencia, \textbf{qué saben} previamente y \textbf{qué necesitan} saber}
+
+\subsubsection{Identificar antes de Comunicar}
+\begin{itemize}
+    \item {\textbf{Hechos} y datos concretos}
+    \item {\textbf{\gls{cntxt}} y cualquier cosa que facilite la comprensión}
+    \item {\textbf{Incógnitas}, conceptos desconocidos o cosas que se pasen por alto}
+    \item {\textbf{Temas comunes} para preguntas, como objetivos, recursos y seguridad}
+\end{itemize}
+
+\subsubsection{Tips para Comunicación Efectiva}
+\begin{itemize}
+    \item {Aprender en el camino y realizar preguntas}
+    \item {Practicar buenos hábitos de escritura para diálogo por escrito. Leer en voz alta antes de enviar la conversación}
+    \item {Responder en un tiempo adecuado}
+    \item {Ser claro con las necesidades, al igual que la historia a contar a través de los datos}
+\end{itemize}
+
+\subsubsection{Balance de Expectativas y Objetivos}
+\begin{itemize}
+    \item {Ser razonables y realistas al establecer plazos y metas}
+    \item {Identificar desafíos y problemas con anticipación, además de posibles soluciones}
+    \item {Resolver conflictos al replantear el problema, determinar el contexto detrás del conflicto, y tener un diálogo con altura de miras}
+\end{itemize}
+
+\subsection{\gls{stkhldrs} más Comunes}
+\begin{itemize}
+    \item {\textbf{Equipo Ejecutivo} : Proporciona liderazgo estratégico y operativo a la empresa. Generalmente están muy ocupados, por lo que se trabaja con el jefe/gerente de proyecto. \textit{Ejemplos : Vicepresidentes, Directores de Marketing, Profesionales}}
+    \item {\textbf{Equipo Orientado al Cliente} : Cualquier persona en la organización que tenga algún nivel de interacción con clientes, actuales y potenciales}
+    \item {\textbf{Equipo Ciencia de Datos} : 
+    \begin{description}
+        \item [Analista de Datos]{: Recolección, transformación y organización de datos, con tal de realizar conclusiones, predicciones y decisiones basadas en hechos}
+        \item [Ingeniero de Datos]{ : Procesamiento de datos iniciales para crear un proceso viable, al darles un formato útil para el análisis. Generalmente es el encargado de prepararlos para los analistas y científicos}
+        \item [Científico de Datos]{ : Creación de modelos y exploración de lo desconocido usando datos sin editar, para encontrar preguntas y problemas nuevos}
+        \item [Especialistas de Depósitos de Datos]{ : Desarrollo de procesos y procedimientos para guardar y organizar datos de forma efectiva}
+    \end{description}}
+\end{itemize}
+
 \newpage
