--- a/notes/process.tex
+++ b/notes/process.tex
@@ -6,13 +6,13 @@
 % data cleaning techniques for spreadsheets + DB
 % verifying + reporting (documenting) cleaning results
 
-
 \section{\textit{Process} - Procesar}
 Después de ser recopilados, los datos pasan por una \textbf{limpieza} para arreglar cualquier limitación como errores, duplicados o espacios vacíos, y manejar imprecisiones, casos extremos y valores desalineados. También se comprueba la ausencia de sesgos
 \begin{itemize}
     \item {\textbf{Datos Duplicados} : el mismo dato aparece en más de una fila}
     \item {\textbf{Datos Indirectos} : datos con características similares a los datos reales}
     \item {\textbf{Fusión de Datos} : proceso de combinación de dos o más sets de datos en uno. Es importante que los sets sean \textbf{compatibles}, es decir, que puedan trabajar entre si}
+    \item {\textbf{Mapeo de Datos} : trazabilidad de campos desde una fuente de datos a otra, para fines de compatibilidad}
 \end{itemize}
 
 \subsection{Datos Sucios}
@@ -54,24 +54,7 @@ Cuando los datos están íntegros, se asegura que son exactos, completos, consis
     \item {Buscar otros sets de datos que puedan funcionar. \textit{Posiblemente realizar Fusión de Datos}}
 \end{itemize}
 
-
-\subsection{Validación de Datos}
-La validación es una herramienta de revisión de exactitud y calidad de los datos antes de añadirlos o importarlos. Se utilizan criterios para los datos, y la validez se determina cuando los valores cumplen (o no) con las restricciones establecidas
-\begin{description}
-    \item [\gls{datatype}]{ : formato correcto para los valores}
-    \item [Rango]{ : los valores se encuentran dentro de un rango de máximos y mínimos predefinidos}
-    \item [Obligatoriedad]{ : los valores no pueden ser nulos, blancos o vacíos}
-    \item [Unicidad]{ : ningún valor está duplicado}
-    \item [Largo de Campo]{ : los valores dentro de un campo se encuentran dentro del rango de caracteres esperado}
-    \item [\gls{rgx}]{ : los valores coinciden con patrones preestablecidos}
-    \item [Campos Cruzados]{ : los valores cumplen simultáneamente con restricciones múltiples}
-    \item [Membresía]{ : los valores en una columna provienen de un conjunto de valores específicos} 
-    \item [Exactitud]{ : se cumple con un grado de conformidad establecido con respecto a la entidad real siendo medida}
-    \item [Exhaustividad]{ : grado en que los datos contienen todas las medidas o componentes deseados}
-    \item [Coherencia]{ : grado de repetibilidad de los datos desde diferentes puntos de entrada o recopilación}
-\end{description}
-
-\subsection{Errores Comunes de Limpieza}
+\subsubsection{Errores Comunes de Limpieza}
 \begin{itemize}
     \item {No verificar errores ortográficos}
     \item {No documentar errores}
@@ -83,6 +66,57 @@ La validación es una herramienta de revisión de exactitud y calidad de los dat
     \item {No analizar el sistema antes de limpiar los datos}
     \item {No realizar copias de seguridad antes de empezar la limpieza}
     \item {No contemplar la limpieza en plazos y procesos}
+\end{itemize}
+
+
+\subsection{Validación de Datos}
+La validación es una herramienta de revisión de exactitud y calidad de los datos antes de añadirlos o importarlos. Se utilizan criterios para los datos, y la validez se determina cuando los valores cumplen (o no) con las restricciones establecidas. 
+
+\subsubsection{Condiciones de Validación}
+\begin{description}
+    \item [\gls{datatype}]{ : formato correcto para los valores}
+    \item [Rango]{ : los valores se encuentran dentro de un rango de máximos y mínimos predefinidos}
+    \item [Obligatoriedad]{ : los valores no pueden ser nulos, blancos o vacíos}
+    \item [Unicidad]{ : ningún valor está duplicado}
+    \item [Largo de Campo]{ : el largo de un campo está dentro del rango de caracteres esperado}
+    \item [\gls{rgx}]{ : los valores coinciden con patrones preestablecidos}
+    \item [Campos Cruzados]{ : los valores cumplen simultáneamente con restricciones múltiples}
+    \item [Membresía]{ : los valores en una columna provienen de un conjunto de valores específicos} 
+    \item [Exactitud]{ : se alcanza un grado de conformidad establecido, respecto a la entidad real medida}
+    \item [Exhaustividad]{ : grado en que los datos contienen todos los componentes deseados}
+    \item [Coherencia]{ : grado de repetibilidad de los datos desde diferentes puntos de entrada o recopilación}
+\end{description}
+
+\subsubsection{Proceso de Verificación}
+Al verificar el proceso de limpieza, se confirma su calidad: si fue bien ejecutada, si los datos resultantes son precisos y confiables. Si es necesario, se realiza otra limpieza manual. Algunos pasos de verificación son
+\begin{itemize}
+    \item {Comparar datos limpios vs. sucios}
+    \item {Ver el proyecto desde una perspectiva general, revisar cómo los datos podrían resolver las metas y problemas del proyecto. \textit{Compatibilidad con la lógica de negocios}}
+    \item {Poner atención a cualquier detalle sospechoso o problemático, como números que no hagan sentido}
+\end{itemize}
+
+\paragraph{Lista de checkeo para Verificación}
+\begin{itemize}
+    \item {Fuentes de errores}
+    \item {Faltas de tipografía en palabras y cifras}
+    \item {Espacios y caracteres extra}
+    \item {Duplicados}
+    \item {Formatos no coincidentes}
+    \item {\gls{str} y fechas desordenadas o incoherentes}
+    \item {Etiquetas engañosas de columnas}
+    \item {Datos truncados}
+\end{itemize}
+
+\subsection{Documentación}
+Proceso en que se mantienen archivos de texto, para realizar rastreos de cambios, adiciones, eliminaciones y errores que hayan aparecido durante un proyecto (no solo limpieza de datos). Mantener documentación permite recuperar errores que se hayan producido en la limpieza, informar a otros usuarios ante cualquier cambio, y evaluar la calidad de los datos limpios. 
+
+Tanto hojas de cálculo como SQL poseen herramientas de \gls{chnglg} incorporadas, que funcionan como un \textit{Historial de Versiones} automático. Estos documentos no tienen formatos preestablecidos por lo que deben acordarse con el resto del equipo, pero por lo general incluyen
+\begin{itemize}
+    \item {Dato, archivo, fórmula, componente que se haya modificado}
+    \item {Descripción del cambio}
+    \item {Fecha, persona que realizó/aprobó la modificación}
+    \item {Número de versión}
+    \item {Motivos detrás del cambio}
 \end{itemize}
 
 \newpage
